Conexão com banco de dados

--- a/PokeApi/appsettings.Development.json
+++ b/PokeApi/appsettings.Development.json
@@ -1,10 +1,13 @@
 {
-  "DetailedErrors": true,
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+    "ConnectionString": {
+        "DefaultConnection": "Data Source=ProAgil.db"
+    },
+    "DetailedErrors": true,
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
     }
-  }
 }
