--- a/PokeApi/appsettings.json
+++ b/PokeApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Initial Catalog=bdTreinamento ; Data source=CGDFSRV18\\MSSQLSRV_DES; user id=USR_DESENVOLVIMENTO ; pwd=Dev2021Srv18CgDf8#4d#w;Max Pool Size=30"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
