--- a/PokeApi/PokeApi.WebAPI.csproj
+++ b/PokeApi/PokeApi.WebAPI.csproj
@@ -4,12 +4,16 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.10" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.10" />
+	</ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\PokeApi.Repository\PokeApi.Repository.csproj" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.10">
+	    <PrivateAssets>all</PrivateAssets>
+	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	  </PackageReference>
   </ItemGroup>
 
 </Project>
