--- a/PokeApi/appsettings.json
+++ b/PokeApi/appsettings.json
@@ -1,7 +1,7 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Initial Catalog=bdTreinamento ; Data source=CGDFSRV18\\MSSQLSRV_DES; user id=USR_DESENVOLVIMENTO ; pwd=Dev2021Srv18CgDf8#4d#w;Max Pool Size=30"
-  },
+    "ConnectionStrings": {
+        "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=PokeApi;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
